git-svn-id: http://devel.cpl.upc.edu/freeling/svn/latest/freeling@242 9b274142-39a2-40f6-a478-1b104364ee40

--- a/THANKS
+++ b/THANKS
@@ -123,5 +123,9 @@
       enlarged the Galician dictionary and retrained the Galician PoS taggers with
       a larger corpus, improving its accuracy.
 
+   >> Pablo Gamallo and Marcos Garcia, from Universidade de Santiago de Compostela,
+      adapted the (European) Portuguese dictionary from LABEL-LEX 
+      (http://label.ist.utl.pt/pt/labellex_pt.php), and trained the PoS tagger.
+
   --- End of List ----
 
