--- a/doc/userman/biblio.bib
+++ b/doc/userman/biblio.bib
@@ -2,13 +2,13 @@
 
 @inproceedings{brants00,
 author = "Thorsten Brants",
-title = "TnT - A Statistical Part- of-Speech Tagger",
+title = "TnT: A Statistical Part-of-Speech Tagger",
 booktitle = "Proceedings of the 6th Conference on Applied Natural Language Processing, ANLP",
 year = "2000",
 organization = "ACL"}
 
 @book{karlsson95,
-editor = "F. Karlsson and Atro Voutilainen and J. Heikkilä and A. Anttila",
+editor = "F. Karlsson and Atro Voutilainen and J. Heikkila and A. Anttila",
 title = "Constraint Grammar: A Language--Independent System for Parsing Unrestricted Text",
 publisher = "Mouton de Gruyter, Berlin and New York",
 year = "1995"}
@@ -18,21 +18,50 @@ author = "Llu\'{\i}s Padr\'o",
 title = "A Hybrid Environment for Syntax--Semantic Tagging",
 year = "1998",
 school = "Dept. Llenguatges i Sistemes Inform\`atics. Universitat Polit\`ecnica de Catalunya",
-note = "http://www.lsi.upc.es/\~{ }padro",
+note = "http://www.lsi.upc.edu/\~{ }padro",
 month = "February"}
 
 @inproceedings{carreras03,
-author ="Xavier Carreras and Lluís Màrquez and Lluís Padró",
+author ="Xavier Carreras and Llu\'{\i}s M\`arquez and Llu\'is Padr\'o",
 title = "A Simple Named Entity Extractor Using AdaBoost",
 year = "2003",
 booktitle ="Proceedings of CoNLL-2003 Shared Task",
 address="Edmonton, Canada",
 month="June"}
 
-@inproceedings{roth04,
+@techreport{roth04,
 author="Dan Roth and Chad Cumby and Mark Sammons and Wen-Tau Yih",
 title="A Relational Feature Extraction Language (FEX)",
-publisher="Cognitive Computation Group, University of Illinois at Urbana Champaign",
+publisher="Cognitive Computation Group",
+institution=" University of Illinois at Urbana Champaign",
 year="2004",
 address="{\tt http://l2r.cs.uiuc.edu/\~{ }cogcomp/software.php}"
 }
+
+@book{fellbaum98,
+editor = "Christiane Fellbaum",
+title = "WordNet. An Electronic Lexical Database",
+publisher = "The MIT Press",
+year = "1998",
+series = "Language, Speech, and Communication"}
+
+
+@article{vossen98a,
+author = "Piek Vossen and L. Bloksma and A. Alonge and E. Marinai and C. Peters and Irene Castell\'on and M. Ant\`onia Mart\'{\i} and German Rigau",
+title = "Compatibility in Interpretation of Relation in EuroWordNet",
+journal = "Computers and the Humanities, Double Special Issue on EuroWordNet",
+year = "1998",
+volume = "32",
+number = "2,3",
+pages = "153--184",
+note = "Also in 'EUROWORDNET A Multilingual Database with Lexical Semantic Networks' ed. Piek Vossen. Kluwer Academic Publishers. Dordrecht, The Netherlands"}
+
+
+@article{atserias05,
+author = "Jordi Atserias and Elisabet Comelles and Aingeru Mayor",
+title = "TXALA: un analizador libre de dependencias para el castellano",
+journal = "Procesamiento del Lenguaje Natural",
+year = "2005",
+number = "35",
+pages = "455--456",
+month = "September"}
