git-svn-id: http://devel.cpl.upc.edu/freeling/svn/latest/freeling@305 9b274142-39a2-40f6-a478-1b104364ee40

--- a/doc/userman/userman.tex
+++ b/doc/userman/userman.tex
@@ -228,16 +228,26 @@ You may control the installation defaults providing appropriate
 %..................................................
 \section{Executing}
 
-  FreeLing is a library, which means that it is a tool to develop 
-new programs which may require linguistic analysis services. 
+  FreeLing is a library, which means that it not a final-user oriented
+  executable program, but a tool to develop new programs which may
+  require linguistic analysis services.
 
-  Nevertheless, a main program is included in the package for
+  Nevertheless, a sample main program is included in the package for
  those who just want a text analyzer. This program may 
  be adapted to fit your needs (e.g. customized input/output formats).
   
   The usage and options of this main program is described in chapter \ref{cap-analyzer}.
+  
+  Please take into account that this program is only a friendly
+  interface to demonstrate FreeLings abilities, but that there are
+  many other potential usages of FreeLing.  
+
+  Thus, the question is not {\sl why this program doesn't offer
+    functionality X?}, {\sl why it doesn't output information Y?}, or
+  {\sl why it doesn't present results in format Z?}, but {\sl How can
+    I use FreeLing to write a program that does exactly what I need?}.
     
-  Also, in the directory src/main/simple\_examples in the tarball, you
+  In the directory {\tt src/main/simple\_examples} in the tarball, you
  can find simpler sample programs that illustrate how to call the library, 
  and that can be used as a starting point to develop your own application.
 
