--- a/THANKS
+++ b/THANKS
@@ -10,122 +10,8 @@
 
   Many people further contributed to by reporting problems, suggesting 
   various improvements, submitting actual code or extending linguistic 
-  databases. Here is a list of these people. Help us keep it complete 
-  and exempt of errors.
+  databases. 
 
-  --- Begin of List ----
-
-  2004
-
-  >> Montserrat Civit (civit@clic.fil.ub.es) developed the 
-     shallow parsing grammars for Spanish and Catalan.
-
-  2005
-
-  >> Mikel Forcada and the InterNostrum 
-     team (http://www.internostrum.com) in Universitat d'Alacant 
-     (http://www.dlsi.ua.es) completed the Spanish and Catalan
-     dictionaries to cover the same lemas in both languages, enlarging
-     the dictionaries from 5,000 to 6,500 lemmas.
-
-  >> TALP and CLiC research centers, who developed the 
-     Catalan WordNet, granted the distribution of the synsets
-     for the 6,500 most frequent lemmas.
-
-  >> The feature extraction module is based on the code developed by 
-     Dan Roth's Cognitive Computation Group at University of Illinois 
-     at Urbana Champaign (UIUC), who we thank for allowing us to distribute
-     our modified version under GPL.
-     More info at:  http://l2r.cs.uiuc.edu/~cogcomp/
-     ** This module is no longer distributed as part of FreeLing, but separately 
-     ** as the Fries library (http://www.lsi.upc.edu/~nlp/omlet+fries)
-
-  >> TALP and CLiC research centers and Natural Language Processing 
-     researchers at UNED (Universidad Nacional de Educacion a 
-     Distancia, http://nlp.uned.es), who developed the Spanish 
-     WordNet, granted the distribution of the synsets for the 6,500
-     most frequent lemmas.
-
-  >> The English WordNet was developed by the Cognitive Science Laboratory 
-     at Princeton University under the direction of Professor George A. Miller.
-     Synset information is included in FreeLing under the original WordNet 
-     license terms (see COPYING file).
-     See http://wordnet.princeton.edu for more details on WordNet
-
-  >> The Italian dictionary is extracted from Morph-it! lexicon developed by 
-     Marco Baroni and his colleagues at the Scuola Superiore di Lingue 
-     Moderne per Interpreti e Traduttori (SSLMIT, http://www.ssit.unibo.it/) 
-     of the University of Bologna. These data are included in this package under
-     their original Creative Commons license (See COPYING file).
-     More info at http://sslmitdev-online.sslmit.unibo.it/
-
-  >> The Galician dictionary was obtained from the OpenTrad project 
-     (http://www.opentrad.org), and was developed by Xavier Gómez Guinovart and
-     the members of the Seminario de Lingüística Informática (http://sli.uvigo.es)
-     at Universidade de Vigo. These data are included in this package under
-     their original Creative Commons license (See COPYING file).
-
-  2006
-
-  >> Jordi Atserias managed to compile FreeLing-1.4 for Windows using cygwin.
-
-  >> Montserrat Marimon contributed in debugging and improving several parts 
-     of the Spanish linguistic data. 
-
-  >> Gorka Labaka, Mikel Lersundi, and Aingeru Mayor from IXA group 
-     (http://ixa.si.ehu.es) at Basque Contry University contributed 
-     with a lot of testing and suggestions on the Named Entity recognizer, 
-     the chunker, and the dependency parsing module.
-
-  >> The Spanish Industry Ministry funded part of FreeLing development through
-     the OpenTrad project (http://www.opentrad.org)
-
-  2007
-
-  >> Javier Puche extended the Java API to support access to parse and dependeny trees
- 
-  >> Bruno Martinez made valuable bugfixing and the necessary changes
-     to enable FreeLing compilation on 64-bit architectures.
-
-  >> The Spanish dictionary was obtained from the Spanish Resource Grammar
-     (http://www.upf.edu/pdi/iula/montserrat.marimon/srg.html)
-     project developed by Montserrat Marimon at the Institut
-     Universitari de Lingüística Aplicada (http://www.iula.upf.edu)
-     of the Universitat Pompeu Fabra. These data are included in this 
-     package under their original Lesser General Public License For 
-     Linguistic Resources (LGPLLR) license (see COPYING file).
-
-  >> The Spanish Education and Science Ministry funded part of
-     FreeLing development through the KNOW project (http://ixa.si.ehu.es/know)
-
-  >> The Spanish Industry Ministry funded part of FreeLing development 
-     through the EuroOpenTrad project (http://www.opentrad.org)
-
-  2008
-
-   >> Jordi Carrera, Marina Lloberes, and Irene Castellón from GRIAL research group extended and improved dependency and shallow parsing grammars for Catalan, Spanish and English.
-
-   >> Francis Tyers, Apertium developer at Prompsit, provided morphological and PoS tagging data sets for Welsh.
-
-   >> Vitalie Scurtu wrote the Italian number recognizer module.
-
-   >> Daniel Berndt and Gemma Boleda debbuged and extended the English dictionary.
-
-   >> Daniel Berndt extended the functionalities of the basic NE recognizer.
-
-   >> Dmitry Vitkovsky largely improved the efficiency of the tokenizer speeding 
-      up the whole analysis chain.
-
-   >> The Spanish Industry Ministry funded part of FreeLing development 
-      through the EuroOpenTrad project (http://www.opentrad.org)
-
-   >> Pablo Gamallo and Marcos Garcia, from Universidade de Santiago de Compostela,
-      enlarged the Galician dictionary and retrained the Galician PoS taggers with
-      a larger corpus, improving its accuracy.
-
-   >> Pablo Gamallo and Marcos Garcia, from Universidade de Santiago de Compostela,
-      adapted the (European) Portuguese dictionary from LABEL-LEX 
-      (http://label.ist.utl.pt/pt/labellex_pt.php), and trained the PoS tagger.
-
-  --- End of List ----
+  A detailed list can be found in "Contributions" section at 
+  FreeLing webpage (http://www.lsi.upc.edu/~nlp/freeling).
 
