--- a/doc/userman/userman.tex
+++ b/doc/userman/userman.tex
@@ -113,9 +113,20 @@ WordNet, such as semantic file codes, or hypernymy relationships.
 %..................................................
 \section{Contributions}
  
-   Many people contributed, directly or indirectly,  to enlarge and
-   enhance this software.  See the THANKS file in the distribution
-   package or the {\tt Contributions} section in FreeLing webpage to learn more.
+  FreeLing was originally written by people in TALP Research 
+  Center at Universitat Politecnica de Catalunya (http://talp.upc.es). 
+
+  Spanish and Catalan linguistic data were originally developed 
+  by people in CLiC, Centre de Llenguatge i Computacio at Universitat
+  de Barcelona (http://clic.fil.ub.es).
+
+  Many people further contributed to by reporting problems, suggesting 
+  various improvements, submitting actual code or extending linguistic 
+  databases. 
+
+  A detailed list can be found in {\sl Contributions} section at 
+  FreeLing webpage ({\tt http://www.lsi.upc.edu/~nlp/freeling}).
+
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -134,7 +145,7 @@ WordNet, such as semantic file codes, or hypernymy relationships.
     \item C++ compiler with basic STL support
     \end{itemize}
 
- \item Enough hard disk space (about 350Mb)
+ \item Enough hard disk space (about 400Mb)
 
  \item Some external libraries are required to compile FreeLing:
     \begin{itemize}
